--- a/src/content/index.njk
+++ b/src/content/index.njk
@@ -7,7 +7,7 @@ permalink: /index.html
 	<header class="[ stack ][][]">
 		<h1>{{ site.title }}</h1>
 
- 		<p class="[][][ subtitle ]">The kinda-boring front end of an <a href="https://11ty.dev">Eleventy</a> project that demonstrates using <a href="https://storybook.js.org">Storybook</a> with <a href="https://mozilla.github.io/nunjucks/templating.html">Nunjucks</a> components.</p>
+ 		<p class="[][][ subtitle ]">An <a href="https://11ty.dev">Eleventy</a> project that demonstrates using <a href="https://storybook.js.org">Storybook</a> with <a href="https://mozilla.github.io/nunjucks/templating.html">Nunjucks</a> components.</p>
 	</header>
 
 	<section class="[ stack ][][]">
@@ -52,13 +52,7 @@ permalink: /index.html
 		</ul>
 	</section>
 
-	<section class="[ stack ][][]">
-		<h2>Get in touch</h2>
-
-		<p>Have a question? Running into trouble? Find a cool variation or improvement? <a href="https://twitter.com/ashur">Give me a shout!</a></p>
-	</section>
-
 	<footer>
-		<p>Built by <a href="https://ashur.cab/rera">Ashur Cabrera</a></p>
+		<p>Built by University of Salford Web Team</p>
 	</footer>
 </div>
