--- a/src/styles/blocks/page.css
+++ b/src/styles/blocks/page.css
@@ -1,4 +1,4 @@
-.page {
+/* .page {
 	color: var(--tint-900);
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	margin: calc( 5vw + var(--size-0) );
@@ -31,4 +31,4 @@
 
 .page ul {
 	padding-left: var(--size-2);
-}
+} */
